set the maximum <h1> width to 550px to avoid overlapping over "next, previous, index" links

--- a/source/.static/default.css
+++ b/source/.static/default.css
@@ -686,7 +686,11 @@ div.body h6 {
     padding: 3px 0 3px 10px;
 }
 
-div.body h1 { margin-top: 0; font-size: 160%; }
+div.body h1 {
+  margin-top: 0;
+  font-size: 160%;
+  width: 550px;
+}
 div.body h2 { font-size: 140%; }
 div.body h3 { font-size: 120%; }
 div.body h4 { font-size: 110%; }
